...
        }
    }
    
    // MARK: - Life cycle methods
    override func viewDidLoad() {
        super.viewDidLoad()
        title = "MyProfile"
        setUpTable()
        getProfile?{[weak self] profile in
            self?.profile = profile
            self?.sections = profile.sections
            self?.summaryText = profile.summary
            self?.imageURL = profile.profilePicURL
...
